--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -18,6 +18,6 @@
     </EDF.UI.Properties.Settings>
   </userSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=.\DrawingDatabase.db;Version=3;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=%LocalAppData%\eDrawingFinder\DrawingDatabase.db;Version=3;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
