--- a/EDF.Common/log4net.config
+++ b/EDF.Common/log4net.config
@@ -16,14 +16,35 @@
       </filter>
     </appender>
     
-    <!-- Sets File appender -->
-    <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="${LocalAppData}\eDrawingFinder\EDF.log"/>
+    <!-- Sets File Sze appender 
+    <appender name="FileAppenderSize" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="${LocalAppData}\eDrawingFinder\logs\"/>
       <appendToFile value="true"/>
       <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="5"/>
-      <maximumFileSize value="10MB"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="2MB"/>
       <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%6date %6[%level] - %message%newline"/>
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="Info"/>
+        <param name="LevelMax" value="Fatal"/>
+      </filter>
+    </appender>
+    -->
+
+    <!-- Sets File Date appender -->
+    <appender name="FileAppenderDate" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="${LocalAppData}\eDrawingFinder\logs\.log"/>
+      <preserveLogFileNameExtension value="true"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="dd.MM.yyyy" />
+      <maxSizeRollBackups value="10"/>
+      <staticLogFileName value="false"/>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%6date %6[%level] - %message%newline"/>
       </layout>
@@ -73,8 +94,8 @@
 
     <!-- Print only messages of level WARN or above in the package EDF.Common.Log -->
     <logger name="EDF.Common.Log">
-    <appender-ref ref="ConsoleAppender" />
-     <appender-ref ref="FileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="FileAppenderDate" />
     </logger>
     
     
